Changed logstash-forwarder by beaver

--- a/test/logstash/logstash.conf
+++ b/test/logstash/logstash.conf
@@ -1,15 +1,19 @@
 input {
-  lumberjack {
-      port => 5000
-      type => "logs"
-      ssl_certificate => "/etc/logstash/ssl/logstash-forwarder.crt"
-      ssl_key => "/etc/logstash/ssl/logstash-forwarder.key"
-    }
+  rabbitmq {
+    host => "rabbitmq-server"
+    queue => "logstash-queue"
+    exchange => "logstash-exchange"
+    key => "logstash-key"
+    exclusive => false
+    durable => true
+    auto_delete => false
+    type => "syslog"
+  }
 }
 
 output {
   elasticsearch { 
-  	protocol => "http"
-  	host => "elasticsearch"
+    protocol => "http"
+    host => "elasticsearch"
   }
 }
