--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -2,30 +2,29 @@ elasticsearch:
   image: elasticsearch:1.4.4
   ports:
     - "9200:9200"
-    - "9300:9300"
 kibana:
   image: thegameofcode/kibana
   links:
     - elasticsearch
   ports:
     - "5601:5601"
+rabbitmq:
+  image: rabbitmq:management
+  environment:
+    - RABBITMQ_NODENAME=my-rabbit
+  ports:
+    - "15672:15672"
 logstash:
   image: thegameofcode/logstash
   links:
     - elasticsearch
+    - "rabbitmq:rabbitmq-server"
   volumes:
     - "$PWD/logstash:/etc/logstash"
-    - "$PWD/logstash/dat:/opt/dat"
-  ports:
-    - "9292:9292"
-logstashforwarder:
-  image: thegameofcode/logstash-forwarder
+beaver:
+  image: thegameofcode/beaver
   links:
-    - elasticsearch
-    - logstash
+    - "rabbitmq:rabbitmq-server"
   volumes:
-    - "$PWD/logstash-forwarder:/etc/logstash-forwarder"
     - "/var/log/syslog:/data/log/system.log"
-  volumes_from:
-    - logstash    
-
+    - "$PWD/beaver:/etc/beaver"
