Changed RabbitMQ by ZeroMQ

--- a/beaver/beaver.conf
+++ b/beaver/beaver.conf
@@ -1,9 +1,8 @@
 [beaver]
-rabbitmq_host: rabbitmq-server
+zeromq_address: tcp://zeromq-server:5556
 logstash_version: 1
 queue_timeout: 43200
 refresh_worker_process: 86400
-rabbitmq_queue_durable: 1
 
 [/data/log/system.log]
 type: syslog
