--- a/logstash/logstash.conf
+++ b/logstash/logstash.conf
@@ -1,13 +1,9 @@
 input {
-  rabbitmq {
-    host => "rabbitmq-server"
-    queue => "logstash-queue"
-    exchange => "logstash-exchange"
-    key => "logstash-key"
-    exclusive => false
-    durable => true
-    auto_delete => false
-    type => "syslog"
+  zeromq {
+    type => 'shipper-input'
+    mode => 'server'
+    topology => 'pushpull'
+    address => 'tcp://*:5556'
   }
 }
 
