Added branch with Docker+Logstash+NGiNX+RSYSLOG

--- a/test/logstash/logstash.conf
+++ b/test/logstash/logstash.conf
@@ -1,9 +1,8 @@
 input {
-  zeromq {
-    type => 'shipper-input'
-    mode => 'server'
-    topology => 'pushpull'
-    address => 'tcp://*:5556'
+  syslog {
+    type => syslog
+    port => 5544
+    codec => json
   }
 }
 
