--- a/test/docker-compose.yml
+++ b/test/docker-compose.yml
@@ -15,11 +15,15 @@ logstash:
   volumes:
     - "$PWD/logstash:/etc/logstash"
   ports:
-    - "5556:5556"
-beaver:
-  image: thegameofcode/beaver
+    - "5544:5544"
+nginx:
+  image: thegameofcode/nginx
   links:
-    - "logstash:zeromq-server"
+    - "logstash:logstash"
   volumes:
     - "/var/log/syslog:/data/log/system.log"
-    - "$PWD/beaver:/etc/beaver"
+    - "$PWD/nginx/nginx.conf:/etc/nginx/nginx.conf"
+    - "$PWD/nginx/nginx.log:/etc/nginx/nginx.log"
+    - "$PWD/nginx/45-nginx-access.conf:/etc/rsyslog.d/45-nginx-access.conf"
+  ports:
+    - "80:80"
