--- a/test/ubuntu-server/45-test.conf
+++ b/test/ubuntu-server/45-test.conf
@@ -1,6 +1,7 @@
-module(load="imuxsock")             # for listening to /dev/log
+module(load="imzmq3")
 module(load="omelasticsearch") # for outputting to Elasticsearch
-# this is for index names to be like: logstash-YYYY.MM.DD
+input(type="imzmq3" action="CONNECT" socktype="SUB" description="tcp://client:11514" subscribe="" ruleset="remote")
+
 template(name="logstash-index"
   type="list") {
     constant(value="logstash-")
@@ -23,9 +24,12 @@ template(name="plain-syslog"
       constant(value="\",\"message\":\"")    property(name="msg" format="json")
     constant(value="\"}")
 }
-# this is where we actually send the logs to Elasticsearch (localhost:9200 by default)
-action(type="omelasticsearch"
-    server="elasticsearch"
-    template="plain-syslog"
-    searchIndex="logstash-index"
-    dynSearchIndex="on")
+
+ruleset(name="remote") {
+	# this is where we actually send the logs to Elasticsearch (localhost:9200 by default)
+	action(type="omelasticsearch"
+	    server="elasticsearch"
+	    template="plain-syslog"
+	    searchIndex="logstash-index"
+	    dynSearchIndex="on")
+}
