--- a/test/ubuntu-client/45-test.conf
+++ b/test/ubuntu-client/45-test.conf
@@ -1,16 +1,17 @@
-module(load="imuxsock")             # for listening to /dev/log
-module(load="omzmq3")             # for listening to /dev/log
+module(load="imfile" PollingInterval="10") # needs to be done just once
+module(load="omzmq3") # for listening to /dev/log
 
+input(type="imfile"
+      file="/var/log/bunyan.log"
+      tag="staging-node-api"
+      ruleset="bunyan")
 
 template(name="file-format" type="list") {
-	property(name="timestamp" dateFormat="rfc3339")
-	constant(value=" ")
-	property(name="hostname")
-	constant(value=" ")
-	property(name="syslogtag")
 	property(name="msg" spifno1stsp="on" )
 	property(name="msg" droplastlf="on" )
 	constant(value="\n")
 }
 
-action(type="omzmq3" sockType="PUB" action="BIND" description="tcp://*:11514" template="file-format")
+ruleset(name="bunyan") {
+	action(type="omzmq3" sockType="PUB" action="BIND" description="tcp://*:11514" template="file-format")
+}
