--- a/test/ubuntu-client/45-test.conf
+++ b/test/ubuntu-client/45-test.conf
@@ -2,16 +2,21 @@ module(load="imfile" PollingInterval="10") # needs to be done just once
 module(load="omzmq3") # for listening to /dev/log
 
 input(type="imfile"
-      file="/var/log/bunyan.log"
-      tag="staging-node-api"
-      ruleset="bunyan")
+      file="/usr/local/nagios/var/nagios.log"
+      tag="nagios"
+      ruleset="nagios")
 
 template(name="file-format" type="list") {
-	property(name="msg" spifno1stsp="on" )
-	property(name="msg" droplastlf="on" )
-	constant(value="\n")
+    property(name="timestamp" dateFormat="rfc3339")
+    constant(value=" ")
+    property(name="hostname")
+    constant(value=" ")
+    property(name="syslogtag")
+    property(name="msg" spifno1stsp="on" )
+    property(name="msg" droplastlf="on" )
+    constant(value="\n")
 }
 
-ruleset(name="bunyan") {
+ruleset(name="nagios") {
 	action(type="omzmq3" sockType="PUB" action="BIND" description="tcp://*:11514" template="file-format")
 }
