--- a/test/ubuntu-server/45-test.conf
+++ b/test/ubuntu-server/45-test.conf
@@ -12,16 +12,24 @@ template(name="logstash-index"
     property(name="timereported" dateFormat="rfc3339" position.from="9" position.to="10")
 }
 
-template(name="bunyan-syslog"
+# this is for formatting our syslog in JSON with @timestamp
+template(name="plain-syslog"
   type="list") {
-    property(name="msg")
+    constant(value="{")
+      constant(value="\"@timestamp\":\"")     property(name="timereported" dateFormat="rfc3339")
+      constant(value="\",\"host\":\"")        property(name="hostname")
+      constant(value="\",\"severity\":\"")    property(name="syslogseverity-text")
+      constant(value="\",\"facility\":\"")    property(name="syslogfacility-text")
+      constant(value="\",\"tag\":\"")   property(name="syslogtag")
+      constant(value="\",\"message\":\"")    property(name="msg")
+    constant(value="\"}")
 }
 
 ruleset(name="remote") {
 	# this is where we actually send the logs to Elasticsearch (localhost:9200 by default)
 	action(type="omelasticsearch"
 	    server="elasticsearch"
-	    template="bunyan-syslog"
+	    template="plain-syslog"
 	    searchIndex="logstash-index"
 	    dynSearchIndex="on")
 }
