--- a/test/ubuntu-client/45-test.conf
+++ b/test/ubuntu-client/45-test.conf
@@ -13,5 +13,5 @@ template(name="file-format" type="list") {
 }
 
 ruleset(name="bunyan") {
-	action(type="omzmq3" sockType="PUB" action="BIND" description="tcp://*:11514" template="file-format")
+	action(type="omzmq3" sockType="PUSH" action="CONNECT" description="tcp://server:11514" template="file-format")
 }
