--- a/test/ubuntu-server/45-test.conf
+++ b/test/ubuntu-server/45-test.conf
@@ -1,6 +1,6 @@
 module(load="imzmq3")
 module(load="omelasticsearch") # for outputting to Elasticsearch
-input(type="imzmq3" action="CONNECT" socktype="SUB" description="tcp://client:11514" subscribe="" ruleset="remote")
+input(type="imzmq3" action="BIND" socktype="PULL" description="tcp://*:11514" ruleset="remote")
 
 template(name="logstash-index"
   type="list") {
