--- a/test/nagios/commands.cfg
+++ b/test/nagios/commands.cfg
@@ -245,3 +245,8 @@ define command{
        command_name    process-host-perfdata-file
        command_line    /bin/mv /usr/local/pnp4nagios/var/host-perfdata /usr/local/pnp4nagios/var/spool/host-perfdata.$TIMET$
 }
+
+define command{
+       command_name    test-command
+       command_line    /bin/echo "{\"@timestamp\":\"$SHORTDATETIME$\",\"service\":\"$SERVICEDESC$\",\"host\":\"$HOSTALIAS$\",\"address\":\"$HOSTADDRESS$\",\"state\":\"$SERVICESTATE$\", \"additionalInfo\":\"$SERVICEOUTPUT$\"}" >> /usr/local/nagios/var/test.log
+}
