--- a/test/ubuntu-client/45-nagios-syslog.conf
+++ b/test/ubuntu-client/45-nagios-syslog.conf
@@ -3,10 +3,10 @@ module(load="omzmq3") # for listening to /dev/log
 
 input(type="imfile"
       file="/usr/local/nagios/var/nagios.log"
-      tag="nagios"
-      ruleset="nagios")
+      tag="nagios-syslog"
+      ruleset="nagios-syslog")
 
-template(name="file-format" type="list") {
+template(name="nagios-syslog-format" type="list") {
     property(name="timestamp" dateFormat="rfc3339")
     constant(value=" ")
     property(name="hostname")
@@ -17,6 +17,6 @@ template(name="file-format" type="list") {
     constant(value="\n")
 }
 
-ruleset(name="nagios") {
-	action(type="omzmq3" sockType="PUB" action="BIND" description="tcp://*:11514" template="file-format")
+ruleset(name="nagios-syslog") {
+	action(type="omzmq3" sockType="PUB" action="BIND" description="tcp://*:11514" template="nagios-syslog-format")
 }
