--- a/test/ubuntu-server/45-nagios-syslog.conf
+++ b/test/ubuntu-server/45-nagios-syslog.conf
@@ -1,6 +1,6 @@
 module(load="imzmq3")
 module(load="omelasticsearch") # for outputting to Elasticsearch
-input(type="imzmq3" action="CONNECT" socktype="SUB" description="tcp://client:11514" subscribe="" ruleset="remote")
+input(type="imzmq3" action="CONNECT" socktype="SUB" description="tcp://client:11514" subscribe="" ruleset="nagios-syslog")
 
 template(name="logstash-index"
   type="list") {
@@ -25,7 +25,7 @@ template(name="plain-syslog"
     constant(value="\"}")
 }
 
-ruleset(name="remote") {
+ruleset(name="nagios-syslog") {
 	# this is where we actually send the logs to Elasticsearch (localhost:9200 by default)
 	action(type="omelasticsearch"
 	    server="elasticsearch"
