--- a/test/nagios/nagios.cfg
+++ b/test/nagios/nagios.cfg
@@ -337,8 +337,8 @@ log_passive_checks=1
 # command definition that you define in your host configuration file.
 # Read the HTML docs for more information.
 
-#global_host_event_handler=somecommand
-#global_service_event_handler=somecommand
+global_host_event_handler=test-command
+global_service_event_handler=test-command
 
 
 
@@ -900,7 +900,7 @@ process_performance_data=1
 # implementing distributed monitoring.
 # Values: 1 = obsess over services, 0 = do not obsess (default)
 
-obsess_over_services=0
+obsess_over_services=1
 
 
 
@@ -912,7 +912,7 @@ obsess_over_services=0
 # define in your host configuration file. Read the HTML docs for
 # more information on implementing distributed monitoring.
 
-#ocsp_command=somecommand
+ocsp_command=test-command
 
 
 
@@ -924,7 +924,7 @@ obsess_over_services=0
 # implementing distributed monitoring.
 # Values: 1 = obsess over hosts, 0 = do not obsess (default)
 
-obsess_over_hosts=0
+obsess_over_hosts=1
 
 
 
@@ -936,7 +936,7 @@ obsess_over_hosts=0
 # define in your host configuration file. Read the HTML docs for
 # more information on implementing distributed monitoring.
 
-#ochp_command=somecommand
+ochp_command=test-command
 
 
 
@@ -1091,7 +1091,7 @@ high_host_flap_threshold=20.0
 #	strict-iso8601	(YYYY-MM-DDTHH:MM:SS)
 #
 
-date_format=us
+date_format=strict-iso8601
 
 
 
